<resources>
    <string name="app_name">Pokus Me</string>

    <string name="title_home">Home</string>
    <string name="title_submit">Submit</string>
    <string name="title_profile">Profile</string>
    <string name="title_signIn">Sign In</string>
    <string name="title_signUp">Sign Up</string>
    <string name="title_setting">Setting</string>
    <string name="title_edit">Edit</string>
    <string name="title_signOut">Sign Out</string>
    <string name="title_profileEdit">Profile Edit</string>
    <string name="title_search">Search</string>

    <string name="text_home">Home</string>
    <string name="text_vote">Vote</string>
    <string name="text_invest">Invest</string>

    <string name="text_popular">Popular</string>
    <string name="text_dispute">Dispute</string>

    <string name="description_emailVerified_checkImage">Check Image</string>
    <string name="description_navigation_default">Default Picture</string>
    <string name="description_navigation_profileEdit">Profile Edit</string>
    <string name="description_vote_default">Default Picture</string>
    <string name="description_vote_up">Like</string>
    <string name="description_vote_down">Hate</string>
    <string name="description_vote_comment">Comment</string>
    <string name="description_vote_favorite">Favorite</string>
    <string name="description_vote_more">More</string>
    <string name="description_profile_default">Default Picture</string>

    <string name="login_signIn">Sign In</string>
    <string name="login_signUp">Sign Up</string>
    <string name="login_google">Google</string>
    <string name="login_facebook">Facebook</string>
    <string name="login_kakao">KaKao</string>
    <string name="login_naver">Naver</string>

    <string name="signIn_email">E-mail</string>
    <string name="signIn_password">Password</string>
    <string name="signIn_signIn">Sign In</string>

    <string name="signUp_displayName">Name</string>
    <string name="signUp_email">E-mail</string>
    <string name="signUp_password">Password</string>
    <string name="signUp_passwordConfirm">Password Confirm</string>
    <string name="signUp_signUp">Sign Up</string>

    <string name="profile_signOut">Sign Out</string>
    <string name="profile_edit">Edit</string>

    <string name="facebook_app_id" translatable="false">173371833894134</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb173371833894134</string>

    <string name="kakao_app_key" translatable="false">a3f6ae8c8e837c0226e9894fdc0ae697</string>

    <string name="userMessage_failure">Failure</string>
    <string name="userMessage_success">Success</string>
    <string name="userMessage_incorrectEmailOrPassword">Incorrect email or password.</string>

    <string name="emailVerified_title">Verify your email address</string>
    <string name="emailVerified_complete">Verify your email address</string>
    <string name="emailVerified_message">We sent an email to the above address.\nPlease check your mail and click the Refresh button to complete your register.</string>
    <string name="emailVerified_signOut">Sign Out</string>
    <string name="emailVerified_refresh">Refresh</string>
    <string name="emailVerified_start">Start</string>
    <string name="emailVerified_checkImage_description">Check</string>
    <string name="text_latestVideo">Latest video</string>
    <string name="text_popularVideo">Trending Video</string>

</resources>
