<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_navigation_signOut"
            android:icon="@drawable/ic_check"
            android:title="@string/title_signIn" />

        <item
            android:id="@+id/menu_navigation_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/title_setting" />
    </group>

    <group android:id="@+id/menu_group_2" android:checkableBehavior="single" >
        <item
            android:id="@+id/menu_navigation_test"
            android:icon="@drawable/ic_person_selector"
            android:title="@string/title_home" />

        <item
            android:id="@+id/menu_navigation_test2"
            android:icon="@drawable/ic_home"
            android:title="@string/title_edit" />
    </group>
</menu>