<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_setting_signOut"
        android:icon="@drawable/ic_exit"
        android:title="@string/title_signOut" />

    <item
        android:id="@+id/menu_setting_profile"
        android:icon="@drawable/ic_person_outline"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/menu_setting_profileEdit"
        android:icon="@drawable/ic_person_outline"
        android:title="@string/title_profileEdit" />

    <item
        android:id="@+id/menu_setting_notice"
        android:icon="@drawable/ic_person_outline"
        android:title="알림" />

    <item
        android:id="@+id/menu_setting_license"
        android:icon="@drawable/ic_person_outline"
        android:title="오픈 라이선스" />

</menu>