<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_voteSpecial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/text_voteSpecial_title"
                android:layout_width="0dp"
                android:layout_height="26dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:background="@color/placeholderBackgroundColor"
                app:layout_constraintEnd_toStartOf="@+id/button_voteSpecial_favorite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/text_voteSpecial_content"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/placeholderBackgroundColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_voteSpecial_title" />

            <View
                android:id="@+id/text_voteSpecial_score"
                android:layout_width="32dp"
                android:layout_height="18dp"
                android:background="@color/placeholderBackgroundColor"
                app:layout_constraintBottom_toBottomOf="@+id/button_voteSpecial_bad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button_voteSpecial_bad" />

            <ImageButton
                android:id="@+id/button_voteSpecial_good"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="#FFFFFF"
                android:contentDescription="@string/description_vote_up"
                android:padding="16dp"
                android:scaleType="centerCrop"
                android:tint="@color/secondaryTextColor"
                app:layout_constraintStart_toEndOf="@+id/text_voteSpecial_score"
                app:layout_constraintTop_toBottomOf="@+id/text_voteSpecial_content"
                app:srcCompat="@drawable/ic_arrow_up" />

            <ImageButton
                android:id="@+id/button_voteSpecial_bad"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="#FFFFFF"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/description_vote_down"
                android:padding="16dp"
                android:scaleType="centerCrop"
                android:tint="@color/secondaryTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/text_voteSpecial_score"
                app:layout_constraintTop_toBottomOf="@+id/text_voteSpecial_content"
                app:srcCompat="@drawable/ic_arrow_down" />

            <ImageButton
                android:id="@+id/button_voteSpecial_favorite"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="#FFFFFF"
                android:contentDescription="@string/description_vote_favorite"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:tint="#F9A825"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_star" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/image_voteSpecial_default"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:contentDescription="@string/description_vote_default"
        app:layout_constraintEnd_toEndOf="@+id/card_voteSpecial"
        app:layout_constraintStart_toStartOf="@+id/card_voteSpecial"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>