<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_votePlaceholder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.facebook.shimmer.ShimmerFrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/button_votePlaceholder_favorite"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/description_vote_favorite"
                    android:padding="8dp"
                    android:scaleType="centerCrop"
                    android:tint="@color/secondaryTextColor"
                    app:layout_constraintEnd_toStartOf="@+id/button_votePlaceholder_more"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_star" />

                <ImageButton
                    android:id="@+id/button_votePlaceholder_more"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/description_vote_more"
                    android:padding="8dp"
                    android:scaleType="centerCrop"
                    android:tint="@color/secondaryTextColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_more" />

                <ImageButton
                    android:id="@+id/button_votePlaceholder_bad"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="#FFFFFF"
                    android:backgroundTint="#FFFFFF"
                    android:contentDescription="@string/description_vote_down"
                    android:padding="16dp"
                    android:scaleType="centerCrop"
                    android:tint="@color/secondaryTextColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_votePlaceholder_content"
                    app:srcCompat="@drawable/ic_arrow_down" />

                <View
                    android:id="@+id/text_votePlaceholder_score"
                    android:layout_width="32dp"
                    android:layout_height="18dp"
                    android:background="@color/placeholderBackgroundColor"
                    app:layout_constraintBottom_toBottomOf="@+id/button_votePlaceholder_bad"
                    app:layout_constraintStart_toEndOf="@+id/button_votePlaceholder_bad"
                    app:layout_constraintTop_toTopOf="@+id/button_votePlaceholder_bad"
                    tools:text="54" />

                <ImageButton
                    android:id="@+id/button_votePlaceholder_good"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/description_vote_up"
                    android:padding="16dp"
                    android:scaleType="centerCrop"
                    android:tint="@color/secondaryTextColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_votePlaceholder_score"
                    app:layout_constraintTop_toBottomOf="@+id/text_votePlaceholder_content"
                    app:srcCompat="@drawable/ic_arrow_up" />

                <ImageButton
                    android:id="@+id/button_votePlaceholder_comment"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="8dp"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/description_vote_comment"
                    android:padding="16dp"
                    android:scaleType="centerCrop"
                    android:tint="@color/secondaryTextColor"
                    app:layout_constraintEnd_toStartOf="@+id/text_votePlaceholder_comment"
                    app:layout_constraintTop_toBottomOf="@+id/text_votePlaceholder_content"
                    app:srcCompat="@drawable/ic_comment" />

                <View
                    android:id="@+id/text_votePlaceholder_comment"
                    android:layout_width="24dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/placeholderBackgroundColor"
                    app:layout_constraintBottom_toBottomOf="@+id/button_votePlaceholder_comment"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/button_votePlaceholder_comment" />

                <View
                    android:id="@+id/text_votePlaceholder_displayName"
                    android:layout_width="80dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/placeholderBackgroundColor"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintStart_toEndOf="@+id/image_votePlaceholder_default"
                    app:layout_constraintTop_toTopOf="@+id/image_votePlaceholder_default" />

                <View
                    android:id="@+id/image_votePlaceholder_default"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/placeholderBackgroundColor"
                    android:cropToPadding="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/text_votePlaceholder_uploadTime"
                    android:layout_width="50dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/placeholderBackgroundColor"
                    app:layout_constraintBottom_toBottomOf="@+id/image_votePlaceholder_default"
                    app:layout_constraintStart_toEndOf="@+id/image_votePlaceholder_default" />

                <View
                    android:id="@+id/text_votePlaceholder_title"
                    android:layout_width="0dp"
                    android:layout_height="26dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/placeholderBackgroundColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_votePlaceholder_default" />

                <View
                    android:id="@+id/text_votePlaceholder_content"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/placeholderBackgroundColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_votePlaceholder_title" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>